# lsvd-rbd

./: #io.cc#  #nvme.h#  .#nvme.h  .Makefile.swp  .clang-format  .env  .gitignore  .gitmodules  .read_cache.cc.swp  .read_cache.h.swp  .refactor_lsvd.cc.swp  .refactor_lsvd.h.swp  .request.h.swp  .write_cache.cc.swp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Makefile  Makefile_old  README.md  aio.cc  architecture.md  argparse.hpp  b  backend.cc  backend.h  base_functions.cc  base_functions.h  batch.cc  batch.h  bdus.c  bitmap.cc  cache.py  clone.py  conanfile.txt  config.cc  config.h  d1  d2  (+134 more)
.github/workflows/: build.yaml  test-build.yaml  test.yaml
atc2024/: 00-abstract.tex  01-intro.tex  02-background.tex  03-architecture.tex  04-eval.tex  05-results.tex  06-conclusion.tex  07-related.tex  08-rest.tex  Makefile  cmds.tex  main.bib  main.tex  template-contents.tex
ci/: setup_ceph.sh
docs/: architecture.md  benchmark-setup.md  benchmark.md  cluster-deploy.md  configuration.md  design-notes.md  example_config.json  hosts.md  install.md  meeting_notes.md  notes.md  perf.md  qemu-launch.md  review-notes.md  setting-up-nvmeof.md  setting-up-spdk.md  testing.md  todo.md  tools.md
experiments/: 2023-11-18_output.txt  2023-11-29_output.txt  2023-11-30_output.txt  20_cache.txt  20_hdd.txt  20_hdd1.txt  20_ssd.txt  5_hdd.txt  5_ssd.txt  bench-generic.bash  bench-lsvd-multi.bash  bench-lsvd.bash  bench-nvme-multi.bash  bench-nvme.bash  bench-ramdisk.bash  bench-rbd.bash  bench-suite.bash  client-bench-abbrev.bash  client-bench-multi.bash  client-bench.bash  client-mount.bash  client-tmp.bash  common.bash  complete-e2e-lsvd.bash  cpu-test-results.md  data-parser-all.py  data-parser.py  debug-lsvd-launch.bash  debug-lsvd-launch.sh  debug-lsvd.bash  example.txt  filebench-fileserver.txt  filebench-oltp.txt  filebench-varmail.txt  graph.ipynb  lsvd.bash  manual-spdk.bash  mount-lsvd.bash  nightly.bash  nightly_hdd.bash  (+12 more)
experiments/abbrev/: bench-lsvd-abbrev.bash  client-bench-abbrev.bash
experiments/backend-metrics/: collect.bash  collect.fish  lsvd.bash  osd.fish  rbd.bash  workload.bash
experiments/filebench-workloads/: fileserver-fsync.f  fileserver.f  oltp.f  randomwrite.f  varmail.f
experiments/filebench_workloads/: fileserver-fsync.f  fileserver.f  oltp.f  prepare.sh  randomwrite.f  run_benchmark.sh  varmail.f
experiments/gnuplot/: filebench.gnu  fio.gnu  iodepth.gnu
experiments/multi-client/: bench-lsvd-multi.bash  bench-rbd-multi.bash  client-bench-multi.bash
experiments/multigw/: client.bash  coord.bash  gateway-1.bash  gateway-2.bash  rbd-gateway-1.bash  rbd-gateway-2.bash
experiments/results/: 2023-08-23T14:30:21.rbd-rep3.txt  2023-08-23T14:37:21.lsvd-rep3.txt  2023-08-24T11:04:51.ramdisk.txt  2023-08-24T11:57:27.rbd-hdd.txt  2023-08-24T12:07:22.lsvd-hdd.txt  2023-08-24T13:18:05.lsvd-ec32.txt  2023-08-29T05:20:02.rbd.lsvd.txt  2023-08-29T08:58:58.triple-ssd.lsvd.txt  2023-11-09T21:19:43.lsvd.txt  2023-11-10T00:36:12.rbd.txt  2023-11-10T05:05:01.ramdisk.txt  2023-11-11T03:09:29.rbd.txt  2023-11-11T03:36:48.rbd.txt  2023-11-11T04:16:18.lsvd.txt  2023-11-11T05:10:25.rbd.txt  2023-11-11T06:41:27.lsvd.txt  2023-11-11T07:44:53.ramdisk.txt  2023-11-12T03:43:52.rbd.txt  2023-11-12T04:44:50.lsvd.txt  2023-11-12T05:47:09.ramdisk.txt  2023-11-18T04:10:11.rbd.txt  2023-11-18T05:07:47.lsvd.txt  2023-11-18T06:03:13.ramdisk.txt  2023-11-18T20:18:32.rbd.txt  2023-11-18T21:17:18.lsvd.txt  2023-11-18T22:12:08.ramdisk.txt  2023-11-19T02:58:54.rbd.txt  2023-11-19T04:00:42.lsvd.txt  2023-11-19T05:01:29.ramdisk.txt  2023-11-20T03:36:09.rbd.txt  2023-11-20T04:32:49.lsvd.txt  2023-11-20T05:27:48.ramdisk.txt  2023-11-28T16:13:30.ramdisk.txt  2023-11-28T18:20:27.rbd.txt  2023-11-28T19:44:26.rbd.txt  2023-11-29T04:24:00.rbd.txt  2023-11-29T05:23:19.lsvd.txt  2023-11-29T06:25:43.ramdisk.txt  2023-11-30T04:52:33.rbd.txt  2023-11-30T05:51:06.lsvd.txt  (+27 more)
fast24-paper/: todo.md
lib/: main.cc
qemu/: launch-instructions.md  qemu-client.bash  qemu-gateway.bash  qemu-multiboot.bash  qemu-rbd.bash  results.md  seed.iso  user-data
reorder/: extent.py  reorder.py
replica-server/: repl_serv.cc  repl_serv.hpp
src/: backend.cc  backend.h  backend_rados.cc  bdev_lsvd.cc  bdev_lsvd.h  bdev_lsvd_rpc.cc  bdev_noop.cc  config.cc  config.h  config_macros.h  doctest.h  download.cc  engine.h  expected.hpp  extent.h  extmap.cc  extmap.h  file_backend.cc  image.cc  image.h  img_reader.cc  img_reader.h  imgtool.cc  io.cc  journal.cc  journal.h  liblsvd.cc  lsvd_debug.cc  lsvd_debug.h  lsvd_tgt.cc  lsvd_types.h  main.cc  meson.build  misc.cc  misc_cache.h  mkcache.cc  nvme.cc  nvme.h  objects.cc  objects.h  (+20 more)
src_rewrite/: backend.cc  backend.h  extmap.cc  extmap.h  image.cc  image.h  journal.cc  journal.h  lsvd_main.cc  meson.build  read_cache.cc  read_cache.h  representation.h  smartiov.h  writelog.cc  writelog.h
subprojects/: cachelib.wrap  cereal.wrap  concurrencpp.wrap  folly.wrap  spdk.wrap  zpp_bits.wrap
subprojects/packagefiles/cachelib/: 0001.patch  meson.build
subprojects/packagefiles/folly/: custom_build.sh  meson.build
subprojects/packagefiles/spdk/: configure-spdk.sh  meson.build  meson_options.txt
test/: blkdev.py  client-repro-bug.bash  client-repro.bash  extmap_unit.cc  fio-debug.bash  fio-perf.bash  fio-test.bash  lsvd_crash_test.cc  lsvd_rnd_test.cc  meson.build  rand_integrity_test.cc  repro-bug-client.bash  repro-bug.bash  repro-bug2.bash  reproduce-bug.bash  sequential_rw.cc  test-1.cc  test-rados.cc  test-seq.cc  test4.py  test6-oplist5.pickle  test8.cc  test_sequential_rw.cc  test_ubuntu_trace.py  test_ubuntu_trace_oplist1.pickle  unit-test.cc  workingTest.py
tools/: bench_automount.bash  cache.py  capture-fio-perf-trace.bash  debug-lsvd.bash  imgtool.cc  mount-lsvd-gateway.bash  readme.md  remove_objs.py  setup-wlog.bash  utils.bash  write_only.fio
vcpkg_overlay_ports/cachelib/: vcpkg.json
vcpkg_overlay_ports/spdk/: CMakeLists.txt  portfile.cmake  (+1 more)
write-cache-server/: README.md  install.sh  malloc_wlog.bash  setup.sh  uring_wlog.bash
(+131 files in other folders)
